adding to contact form

--- a/PRESTIGE GROOM ROOM REAL WEBSITE/appsettings.Development.json
+++ b/PRESTIGE GROOM ROOM REAL WEBSITE/appsettings.Development.json
@@ -1,12 +1,19 @@
 {
   "Logging": {
+    "/>": "</smtp>",
+    "</mailSettings>": "</system.net>",
+    "<network": "host=\"smtp-mail.outlook.com\"",
+    "<smtp": "from=\"you@outlook.com\">",
+    "<system.net>": "<mailSettings>",
+    "ConnectionStrings": {
+      "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=SpeakerDB;Trusted_Connection=True;MultipleActiveResultSets=true"
+    },
     "LogLevel": {
       "Default": "Information",
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
     },
-    "ConnectionStrings": {
-      "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=SpeakerDB;Trusted_Connection=True;MultipleActiveResultSets=true"
-    }
+    "password=\"password\"": "enableSsl=\"true\"",
+    "port=\"587\" ": "userName=\"you@outlook.com\""
   }
 }
