--- a/PRESTIGE GROOM ROOM REAL WEBSITE/PRESTIGE GROOM ROOM REAL WEBSITE.csproj
+++ b/PRESTIGE GROOM ROOM REAL WEBSITE/PRESTIGE GROOM ROOM REAL WEBSITE.csproj
@@ -6,9 +6,13 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Views\NewFolder1\**" />
     <Compile Remove="wwwroot\Uploads\**" />
+    <Content Remove="Views\NewFolder1\**" />
     <Content Remove="wwwroot\Uploads\**" />
+    <EmbeddedResource Remove="Views\NewFolder1\**" />
     <EmbeddedResource Remove="wwwroot\Uploads\**" />
+    <None Remove="Views\NewFolder1\**" />
     <None Remove="wwwroot\Uploads\**" />
   </ItemGroup>
 
