Fixing errors for email booking

--- a/PRESTIGE GROOM ROOM REAL WEBSITE/appsettings.json
+++ b/PRESTIGE GROOM ROOM REAL WEBSITE/appsettings.json
@@ -9,5 +9,19 @@
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
     }
+
+  },
+  "Gmail": {
+    "Host": "smtp.gmail.com",
+    "Port": 587,
+    "Username": "Jeremiah.filipo17@gmail,com",
+    "Password": "Jayyistheman12341820",
+    "SMTP": {
+      "starttls": {
+        "enable": true
+      }
+    }
   }
+
+
 }
